src/flake8_comprehensions/snapshots/ruff__flake8_comprehensions__tests__C402_C402.py.snap
---
source: src/flake8_comprehensions/mod.rs
expression: checks
---
- kind: UnnecessaryGeneratorDict
  location:
    row: 1
    column: 0
  end_location:
    row: 1
    column: 30
  fix:
    location:
      row: 1
      column: 0
    end_location:
      row: 1
      column: 30
    content: "{x: x for x in range(3)}"
    message: ~
  parent: ~
- kind: UnnecessaryGeneratorDict
  location:
    row: 2
    column: 0
  end_location:
    row: 4
    column: 1
  fix:
    location:
      row: 2
      column: 0
    end_location:
      row: 4
      column: 1
    content: "{\n    x: x for x in range(3)\n}"
    message: ~
  parent: ~

