src/flake8_comprehensions/snapshots/ruff__flake8_comprehensions__tests__C404_C404.py.snap
---
source: src/flake8_comprehensions/mod.rs
expression: checks
---
- kind: UnnecessaryListComprehensionDict
  location:
    row: 1
    column: 0
  end_location:
    row: 1
    column: 32
  fix:
    patch:
      content: "{i: i for i in range(3)}"
      location:
        row: 1
        column: 0
      end_location:
        row: 1
        column: 32

