src/flake8_comprehensions/snapshots/ruff__flake8_comprehensions__tests__C405_C405.py.snap
---
source: src/flake8_comprehensions/mod.rs
expression: checks
---
- kind:
    UnnecessaryLiteralSet: list
  location:
    row: 1
    column: 5
  end_location:
    row: 1
    column: 16
  fix:
    patch:
      content: "{1, 2}"
      location:
        row: 1
        column: 5
      end_location:
        row: 1
        column: 16
- kind:
    UnnecessaryLiteralSet: tuple
  location:
    row: 2
    column: 5
  end_location:
    row: 2
    column: 16
  fix:
    patch:
      content: "{1, 2}"
      location:
        row: 2
        column: 5
      end_location:
        row: 2
        column: 16
- kind:
    UnnecessaryLiteralSet: list
  location:
    row: 3
    column: 5
  end_location:
    row: 3
    column: 12
  fix:
    patch:
      content: set()
      location:
        row: 3
        column: 5
      end_location:
        row: 3
        column: 12
- kind:
    UnnecessaryLiteralSet: tuple
  location:
    row: 4
    column: 5
  end_location:
    row: 4
    column: 12
  fix:
    patch:
      content: set()
      location:
        row: 4
        column: 5
      end_location:
        row: 4
        column: 12

