src/flake8_comprehensions/snapshots/ruff__flake8_comprehensions__tests__C408_C408.py.snap
---
source: src/flake8_comprehensions/mod.rs
expression: checks
---
- kind:
    UnnecessaryCollectionCall: tuple
  location:
    row: 1
    column: 4
  end_location:
    row: 1
    column: 11
  fix:
    location:
      row: 1
      column: 4
    end_location:
      row: 1
      column: 11
    content: ()
    message: ~
  parent: ~
- kind:
    UnnecessaryCollectionCall: list
  location:
    row: 2
    column: 4
  end_location:
    row: 2
    column: 10
  fix:
    location:
      row: 2
      column: 4
    end_location:
      row: 2
      column: 10
    content: "[]"
    message: ~
  parent: ~
- kind:
    UnnecessaryCollectionCall: dict
  location:
    row: 3
    column: 5
  end_location:
    row: 3
    column: 11
  fix:
    location:
      row: 3
      column: 5
    end_location:
      row: 3
      column: 11
    content: "{}"
    message: ~
  parent: ~
- kind:
    UnnecessaryCollectionCall: dict
  location:
    row: 4
    column: 5
  end_location:
    row: 4
    column: 14
  fix:
    location:
      row: 4
      column: 5
    end_location:
      row: 4
      column: 14
    content: "{\"a\": 1}"
    message: ~
  parent: ~

