src/flake8_comprehensions/snapshots/ruff__flake8_comprehensions__tests__C409_C409.py.snap
---
source: src/flake8_comprehensions/mod.rs
expression: checks
---
- kind:
    UnnecessaryLiteralWithinTupleCall: list
  location:
    row: 1
    column: 5
  end_location:
    row: 1
    column: 14
  fix:
    location:
      row: 1
      column: 5
    end_location:
      row: 1
      column: 14
    content: ()
    message: ~
  parent: ~
- kind:
    UnnecessaryLiteralWithinTupleCall: list
  location:
    row: 2
    column: 5
  end_location:
    row: 2
    column: 18
  fix:
    location:
      row: 2
      column: 5
    end_location:
      row: 2
      column: 18
    content: "(1, 2)"
    message: ~
  parent: ~
- kind:
    UnnecessaryLiteralWithinTupleCall: tuple
  location:
    row: 3
    column: 5
  end_location:
    row: 3
    column: 18
  fix:
    location:
      row: 3
      column: 5
    end_location:
      row: 3
      column: 18
    content: "(1, 2)"
    message: ~
  parent: ~
- kind:
    UnnecessaryLiteralWithinTupleCall: list
  location:
    row: 4
    column: 5
  end_location:
    row: 7
    column: 2
  fix:
    location:
      row: 4
      column: 5
    end_location:
      row: 7
      column: 2
    content: "(\n    1,\n    2\n)"
    message: ~
  parent: ~
- kind:
    UnnecessaryLiteralWithinTupleCall: tuple
  location:
    row: 8
    column: 5
  end_location:
    row: 10
    column: 1
  fix:
    location:
      row: 8
      column: 5
    end_location:
      row: 10
      column: 1
    content: "(1, 2)"
    message: ~
  parent: ~

