src/flake8_comprehensions/snapshots/ruff__flake8_comprehensions__tests__C410_C410.py.snap
---
source: src/flake8_comprehensions/mod.rs
expression: checks
---
- kind:
    UnnecessaryLiteralWithinListCall: list
  location:
    row: 1
    column: 5
  end_location:
    row: 1
    column: 17
  fix:
    patch:
      content: "[1, 2]"
      location:
        row: 1
        column: 5
      end_location:
        row: 1
        column: 17
- kind:
    UnnecessaryLiteralWithinListCall: tuple
  location:
    row: 2
    column: 5
  end_location:
    row: 2
    column: 17
  fix:
    patch:
      content: "[1, 2]"
      location:
        row: 2
        column: 5
      end_location:
        row: 2
        column: 17
- kind:
    UnnecessaryLiteralWithinListCall: list
  location:
    row: 3
    column: 5
  end_location:
    row: 3
    column: 13
  fix:
    patch:
      content: "[]"
      location:
        row: 3
        column: 5
      end_location:
        row: 3
        column: 13
- kind:
    UnnecessaryLiteralWithinListCall: tuple
  location:
    row: 4
    column: 5
  end_location:
    row: 4
    column: 13
  fix:
    patch:
      content: "[]"
      location:
        row: 4
        column: 5
      end_location:
        row: 4
        column: 13

