src/flake8_comprehensions/snapshots/ruff__flake8_comprehensions__tests__C413_C413.py.snap
---
source: src/flake8_comprehensions/mod.rs
expression: checks
---
- kind:
    UnnecessaryCallAroundSorted: list
  location:
    row: 3
    column: 0
  end_location:
    row: 3
    column: 15
  fix:
    patch:
      content: sorted(x)
      location:
        row: 3
        column: 0
      end_location:
        row: 3
        column: 15
- kind:
    UnnecessaryCallAroundSorted: reversed
  location:
    row: 4
    column: 0
  end_location:
    row: 4
    column: 19
  fix:
    patch:
      content: "sorted(x, reverse=True)"
      location:
        row: 4
        column: 0
      end_location:
        row: 4
        column: 19
- kind:
    UnnecessaryCallAroundSorted: reversed
  location:
    row: 5
    column: 0
  end_location:
    row: 5
    column: 36
  fix:
    patch:
      content: "sorted(x, key=lambda e: e, reverse=True)"
      location:
        row: 5
        column: 0
      end_location:
        row: 5
        column: 36
- kind:
    UnnecessaryCallAroundSorted: reversed
  location:
    row: 6
    column: 0
  end_location:
    row: 6
    column: 33
  fix:
    patch:
      content: "sorted(x, reverse=True)"
      location:
        row: 6
        column: 0
      end_location:
        row: 6
        column: 33

